force-app/main/default/objects/Krow__Revenue_Recognition_Detail__c/Krow__Revenue_Recognition_Detail__c.object-meta.xml
<CustomObject>
    <label>Revenue Recognition Detail</label>
    <nameField>
        <displayFormat>RD{00000000}</displayFormat>
        <label>Revenue Recognition Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Recognition Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>