force-app/main/default/objects/Krow__Revenue_Recognition_Detail__c/fields/Krow__Account__c.field-meta.xml
<CustomField>
    <fullName>Krow__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Revenue Recognition Detail</relationshipLabel>
    <relationshipName>Revenue_Recognition_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>