force-app/main/default/objects/Krow__Revenue_Recognition_Detail__c/fields/Krow__Contract_Line__c.field-meta.xml
<CustomField>
    <fullName>Krow__Contract_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Line</label>
    <referenceTo>Krow__Contract_Line__c</referenceTo>
    <relationshipLabel>Revenue Recognition Detail</relationshipLabel>
    <relationshipName>Revenue_Recognition_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>