force-app/main/default/objects/Krow__Revenue_Recognition_Detail__c/fields/Krow__Practice__c.field-meta.xml
<CustomField>
    <fullName>Krow__Practice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Practice from Project.</description>
    <label>Practice</label>
    <referenceTo>Krow__Practice__c</referenceTo>
    <relationshipLabel>Revenue Recognition Detail</relationshipLabel>
    <relationshipName>Revenue_Recognition_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>