force-app/main/default/objects/Krow__Revenue_Recognition_Detail__c/fields/Krow__Project__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Krow__Project__c</referenceTo>
    <relationshipLabel>Revenue Recognition Detail</relationshipLabel>
    <relationshipName>Revenue_Recognition_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>