force-app/main/default/objects/Krow__Revenue_Recognition_Detail__c/fields/Krow__Recognized_Date__c.field-meta.xml
<CustomField>
    <fullName>Krow__Recognized_Date__c</fullName>
    <label>Recognized Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>