force-app/main/default/objects/Krow__Revenue_Recognition_Detail__c/fields/Krow__Recognized_This_Period__c.field-meta.xml
<CustomField>
    <fullName>Krow__Recognized_This_Period__c</fullName>
    <label>Recognized This Period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>