force-app/main/default/objects/Krow__Revenue_Recognition_Detail__c/fields/Krow__Region__c.field-meta.xml
<CustomField>
    <fullName>Krow__Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Region from project.</description>
    <label>Region</label>
    <referenceTo>Krow__Region__c</referenceTo>
    <relationshipLabel>Revenue Recognition Detail</relationshipLabel>
    <relationshipName>Revenue_Recognition_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>