force-app/main/default/objects/Krow__Revenue_Recognition_Detail__c/fields/Krow__Revenue_Recognition_Summary__c.field-meta.xml
<CustomField>
    <fullName>Krow__Revenue_Recognition_Summary__c</fullName>
    <label>Revenue Recognition Summary</label>
    <referenceTo>Krow__Revenue_Recognition_Summary__c</referenceTo>
    <relationshipLabel>Revenue Recognition Detail</relationshipLabel>
    <relationshipName>Revenue_Recognition_Detail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>