force-app/main/default/objects/Krow__Revenue_Recognition_Detail__c/fields/Krow__Total_Recognized__c.field-meta.xml
<CustomField>
    <fullName>Krow__Total_Recognized__c</fullName>
    <label>Total Recognized</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>